fix: fix 'z-index' in @media .filter

--- a/online-store-team/src/components/view/Store/filter.css
+++ b/online-store-team/src/components/view/Store/filter.css
@@ -33,7 +33,7 @@
   .filter {
     position: fixed;
     left: -800px;
-    z-index: 10;
+    z-index: 2000;
     background-color: #fff;
     transition: left 1s;
   }
